# OmniLED

./: .env  .gitignore  .markdownlint.json  CONTRIBUTING.md  Cargo.toml  Makefile.toml  Packager.toml  README.md  applications.json  applications.lua  build.rs  devices.lua  displays.json  outputs.lua  scripts.lua  server.json  settings.lua  settings.luau  spotify_credentials
applications/audio/: Cargo.toml
applications/audio/src/: main.rs
applications/clock/: Cargo.toml
applications/clock/src/: main.rs
applications/media/: Cargo.toml
applications/media/src/: main.rs  media.rs
applications/weather/: Cargo.toml
applications/weather/src/: main.rs
debug-runner/: Cargo.toml
debug-runner/src/: main.rs
oled-api/: Cargo.toml  build.rs  plugin.proto
oled-api/proto/: plugin.proto
oled-api/src/: lib.rs  logging.rs  plugin.rs  types.proto
oled-applications/audio/: Cargo.toml
oled-applications/audio/src/: main.rs
oled-applications/clock/: Cargo.toml
oled-applications/clock/src/: main.rs
oled-applications/media/: Cargo.toml  README.md
oled-applications/media/src/: main.rs
oled-applications/weather/: Cargo.toml  README.md
oled-applications/weather/src/: main.rs  weather_api.rs
oled-derive/: Cargo.toml
oled-derive/src/: common.rs  from_lua_value.rs  into_proto.rs  lib.rs  unique_user_data.rs  user_data_identifier.rs
omni-led/: Cargo.toml  build.rs
omni-led-api/: Cargo.toml  build.rs  omni_led_api.h
omni-led-api/plugin/: plugin.proto
omni-led-api/proto/: plugin.proto
omni-led-api/src/: c_api.rs  cli_types.rs  lib.rs  logging.rs  plugin.rs  rust_api.rs  types.rs
omni-led-applications/audio/: Cargo.toml  README.md
omni-led-applications/audio/src/: lib.rs  main.rs
omni-led-applications/clock/: Cargo.toml  README.md
omni-led-applications/clock/src/: lib.rs  main.rs
omni-led-applications/hwinfo/: Cargo.toml
omni-led-applications/hwinfo/src/: main.rs
omni-led-applications/images/: Cargo.toml  README.md
omni-led-applications/images/src/: lib.rs  main.rs
omni-led-applications/media/: Cargo.toml  README.md
omni-led-applications/media/src/: main.rs
omni-led-applications/system/: Cargo.toml  README.md
omni-led-applications/system/src/: cpu.rs  gpu.rs  lib.rs  main.rs  util.rs
omni-led-applications/weather/: Cargo.toml  README.md
omni-led-applications/weather/src/: lib.rs  main.rs  weather_api.rs
omni-led-derive/: Cargo.toml
omni-led-derive/omni-led-derive-impl/: Cargo.toml
omni-led-derive/omni-led-derive-impl/src/: from_lua_value.rs  lib.rs
omni-led-derive/src/: common.rs  from_lua_value.rs  into_proto.rs  lib.rs  lua_enum.rs  lua_name.rs  plugin_entry.rs  unique_user_data.rs
omni-led-derive/tests/: from_lua_value_tests.rs
omni-led-lib/: Cargo.toml  build.rs
omni-led-lib/src/: lib.rs
omni-led-lib/src/app_loader/: app_loader.rs  c_plugin.rs  mod.rs  process.rs
omni-led-lib/src/autostart/: autostart_linux.rs  autostart_macos.rs  autostart_windows.rs  mod.rs
omni-led-lib/src/common/: common.rs  defer.rs  lua_enum.rs  lua_register.rs  lua_traits.rs  mod.rs  user_data.rs
omni-led-lib/src/constants/: config.rs  configs.rs  constants.rs  mod.rs
omni-led-lib/src/devices/: devices.rs  mod.rs
omni-led-lib/src/events/: cbor_to_lua.rs  dispatcher.rs  event_handle.rs  event_loop.rs  event_queue.rs  events.rs  mod.rs  proto_to_lua.rs  shortcuts.rs
omni-led-lib/src/logging/: logger.rs
omni-led-lib/src/plugin_loader/: c_plugin.rs  mod.rs  plugin_loader.rs
omni-led-lib/src/renderer/: animation.rs  animation_group.rs  bit.rs  buffer.rs  font_selector.rs
omni-led-lib/src/script_handler/: script_data_types.rs  script_handler.rs
omni-led-lib/src/semaphore/: mod.rs
omni-led-lib/src/server/: server.rs
omni-led-lib/src/settings/: settings.rs
omni-led-lib/src/tray_icon/: tray_icon.rs
omni-led-lib/src/ui/: event.rs  handler.rs  icon_image.rs  mod.rs  tray_icon.rs  window.rs
omni-led-plugins/clock/: Cargo.toml  README.md
omni-led-plugins/clock/src/: lib.rs
omni-led-plugins/images/: Cargo.toml  README.md
omni-led-plugins/images/src/: lib.rs
omni-led-plugins/system/: Cargo.toml  README.md
omni-led-plugins/system/src/: cpu.rs  gpu.rs  lib.rs  mem.rs
omni-led-setup/: Cargo.toml  build.rs
omni-led-setup/src/: bytes.rs  main.rs  util.rs
omni-led/src/: configs.rs  console.rs  lib.rs  logging.rs  main.rs  tray_icon.rs
omni-led/src/app_loader/: app_loader.rs  process.rs
omni-led/src/common/: common.rs  mod.rs  user_data.rs
omni-led/src/constants/: configs.rs  constants.rs  mod.rs
omni-led/src/devices/: device.rs  devices.rs  mod.rs
omni-led/src/events/: event_loop.rs  event_queue.rs  events.rs  mod.rs  shortcuts.rs
omni-led/src/keyboard/: keyboard.rs  mod.rs
omni-led/src/logging/: logger.rs  mod.rs
omni-led/src/renderer/: animation.rs  animation_group.rs  bit.rs  buffer.rs  font_manager.rs  font_selector.rs  images.rs  mod.rs  renderer.rs
omni-led/src/script_handler/: mod.rs  script_data_types.rs  script_handler.rs
omni-led/src/semaphore/: mod.rs
omni-led/src/server/: mod.rs  server.rs
omni-led/src/settings/: mod.rs  settings.rs
omni-led/src/tray_icon/: mod.rs  tray_icon.rs
omni-led/testbins/test_events/: Cargo.toml
omni-led/tests/: test.rs
omni-led/tests/common/: mod.rs
omni-led/tests/config/: applications.lua  devices.lua  scripts.lua
setup/: Cargo.toml  build.rs
setup/defaults/: scripts.lua  settings.lua
setup/src/: bytes.rs  main.rs  util.rs
steelseries_oled/: Cargo.toml  build.rs
steelseries_oled/src/: main.rs  plugin.rs  steelseries_api.rs
steelseries_oled/src/app_loader/: app_loader.rs  process.rs
steelseries_oled/src/common/: cleanup_guard.rs  common.rs  mod.rs  scoped_value.rs  user_data.rs
steelseries_oled/src/constants/: constants.rs
steelseries_oled/src/devices/: device.rs  devices.rs  mod.rs
steelseries_oled/src/events/: event_handler.lua  event_loop.rs  event_queue.rs  events.rs  key_combination_handler.rs  mod.rs  shortcuts.rs
steelseries_oled/src/keyboard/: keyboard.rs
steelseries_oled/src/lisp_handler/: custom_functions.rs  mod.rs  (+1 more)
(+274 files in other folders)
