[workspace]

members = [
    "omni-led",
    "omni-led-api",
    "omni-led-derive",
    "omni-led-setup",
    "omni-led-applications/audio",
    "omni-led-applications/clock",
    "omni-led-applications/images",
    "omni-led-applications/media",
    "omni-led-applications/weather",
]

resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
