[workspace]

members = [
    "omni-led",
    "omni-led-api",
    "omni-led-derive",
    "omni-led-lib",
    "omni-led-plugins/audio",
    "omni-led-plugins/clock",
    "omni-led-plugins/images",
    "omni-led-plugins/media",
    "omni-led-plugins/system",
    "omni-led-plugins/weather",
]

resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
