[package]
name = "debug-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
oled-api = { path = "../oled-api" }
oled-server = { path = "../oled-server" }
tokio = { version = "1", features = ["full"] }