[package]
name = "oled-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
proc-macro2 = "1"
syn = "2.0"
quote = "1.0"

[features]
from-lua-value = []
into-proto = []