[package]
name = "omni-led-api"
version = "0.9.1"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
image = "0.25"
log = { version = "0.4", features = ["std"] }
prost = "0.14"

[build-dependencies]
bindgen = "0.71.0"
prost-build = "0.14"
