[package]
name = "omni-led-api"
version = "0.9.1"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
ciborium = "0.2"
image = { version = "0.25", features = ["serde"] }
log = { version = "0.4", features = ["std"] }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
bindgen = "0.72"
