[package]
name = "omni-led-derive"
version = "0.10.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.11"
proc-macro2 = "1"
syn = "2.0"
quote = "1.0"

[dev-dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "macros"] }
regex = "1.10"

[features]
from-lua-value = []
lua-enum = []
lua-name = []
plugin-entry = []
