[package]
name = "omni-led-derive"
version = "0.11.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
mlua = { version = "0.11", features = ["lua54", "vendored", "macros"] }
omni-led-derive-impl = { path = "omni-led-derive-impl" }

[dev-dependencies]
regex = "1.10"

[features]
from-lua-value = ["omni-led-derive-impl/from-lua-value"]
lua-enum = ["omni-led-derive-impl/lua-enum"]
lua-name = ["omni-led-derive-impl/lua-name"]
plugin-entry = ["omni-led-derive-impl/plugin-entry"]
