[package]
name = "omni-led-lib"
version = "0.11.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
ciborium = "0.2"
convert_case = "0.11"
device_query = "4.0"
dirs-next = "2.0"
font-kit = "0.14"
freetype-rs = "0.36"
hidapi = "2.6"
humantime = "2.3"
image = "0.25"
lazy_static = "1.4"
libloading = "0.9"
log = { version = "0.4", features = ["std"] }
mlua = { version = "0.11", features = ["lua54", "vendored", "macros"] }
num-traits = "0.2"
opener = { version = "0.8", features = ["reveal"] }
regex = "1.10"
rusb = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
softbuffer = "0.4"
omni-led-api = { path = "../omni-led-api" }
omni-led-derive = { path = "../omni-led-derive", features = ["from-lua-value", "lua-enum", "lua-name"] }
tray-icon = "0.24"
ureq = { version = "3.1", features = ["json"] }
winit = "0.30"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Security", "Win32_UI_Shell", "Win32_System", "Win32_System_Com", "Win32_System_Threading"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
windres = "0.2"

[dev-dependencies]
test-case = "3.3.1"

[features]
dev = []
