[package]
name = "omni-led-setup"
version = "0.2.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
convert_case = "0.7"
dirs-next = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[build-dependencies]
convert_case = "0.7"

[target.'cfg(target_os = "windows")'.build-dependencies]
windres = "0.2"
