[package]
name = "omni-led-setup"
version = "0.6.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
convert_case = "0.8"
dirs-next = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[build-dependencies]
convert_case = "0.8"

[target.'cfg(target_os = "windows")'.build-dependencies]
windres = "0.2"
