[package]
name = "omni-led-setup"
version = "0.9.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
convert_case = "0.11"
dirs-next = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"

[build-dependencies]
convert_case = "0.11"

[target.'cfg(target_os = "windows")'.build-dependencies]
windres = "0.2"
