[package]
name = "omni-led"
version = "0.5.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"
default-run = "omni-led"

[dependencies]
log = { version = "0.4", features = ["std"] }
log4rs = "1.4"
mlua = "0.11.4"
omni-led-lib = { path = "../omni-led-lib" }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }

[features]
dev = ["omni-led-lib/dev"]
