[package]
name = "omni-led"
version = "0.9.1"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"
default-run = "omni-led"

[dependencies]
log = { version = "0.4", features = ["std"] }
log4rs = "1.4"
mlua = "0.11.4"
omni-led-lib = { path = "../omni-led-lib" }

[features]
dev = ["omni-led-lib/dev"]
