[package]
name = "omni-led"
version = "0.11.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"
default-run = "omni-led"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
log4rs = "1.4"
mlua = "0.11"
omni-led-lib = { path = "../omni-led-lib" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Console"] }

[features]
dev = ["omni-led-lib/dev"]
