[package]
name = "setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs-next = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

#[target.'cfg(target_os = "windows")'.build-dependencies]
#winres = "0.1"