[package]
name = "steelseries_oled"
version = "0.1.0"
edition = "2021"
default-run = "steelseries_oled"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = "0.11"
freetype-rs = "*"
image = "0.24"
lazy_static = "1.4"
log = "0.4"
log4rs = "1.2"
mlua = { version = "0.9", features = ["async", "lua54", "vendored", "macros", "serialize", "unstable"] }
num-traits = "0.2"
rdev = { version =  "0.5", features = ["serialize"] }
rusb = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.1"
tokio = { version = "1", features = ["full"] }
ureq = { version = "2.4", features = ["json"] }
warp = "0.3"
tray-item = "0.9"

# Enable tray icon support on linux
[target.'cfg(target_os = "linux")'.dependencies.tray-item]
version = "0.9"
features = [ "ksni" ]

# Compile tray icon assets for windows
[target.'cfg(target_os = "windows")'.build-dependencies]
windres = "0.2"