[package]
name = "steelseries_oled"
version = "0.1.0"
edition = "2021"
default-run = "steelseries_oled"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6"
device_query = "2.0"
dirs-next = "2.0"
font-kit = "0.14"
freetype-rs = "*"
image = "0.25"
lazy_static = "1.4"
log = "0.4"
log4rs = "1.3"
mlua = { version = "0.9", features = ["async", "lua54", "vendored", "macros", "serialize", "unstable"] }
minifb = "0.27"
num-traits = "0.2"
prost = "0.13"
opener = { version = "0.7", features = ["reveal"] }
regex = "1.10"
rusb = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oled-api = { path = "../oled-api" }
oled-derive = { path = "../oled-derive", features = ["from-lua-value", "unique-user-data"] }
oled-log = { path = "../oled-log" }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
ureq = { version = "2.4", features = ["json"] }
tonic = "0.12.0"
tray-item = "0.10"

# Enable tray icon support on linux
[target.'cfg(target_os = "linux")'.dependencies.tray-item]
version = "0.10"
features = ["ksni"]

# Compile tray icon assets for windows
[target.'cfg(target_os = "windows")'.build-dependencies]
windres = "0.2"

[features]
dev = []