[package]
name = "media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../../api" }
clap = { version = "4.4", features = ["derive"] }
smol = "1.3"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.51"
features = [
    "Foundation",
    "Foundation_Collections",
    "Media_Control",
]

[target.'cfg(target_os = "linux")'.dependencies.mpris]
version = "2"
