[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../../api" }
chrono = { version = "0.4" }
clap = { version = "4.4", features = ["derive"] }
ureq = { version = "2.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
