[package]
name = "audio"
version = "0.1.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
log = "0.4"
oled-api = { path = "../../oled-api" }
oled-derive = { path = "../../oled-derive", features = ["into-proto"] }
oled-log = { path = "../../oled-log" }
tokio = { version = "1.38", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["implement", "Win32_Devices_FunctionDiscovery", "Win32_Foundation", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Shell_PropertiesSystem"] }
windows-core = "0.58"

[target.'cfg(target_os = "linux")'.dependencies]
pulse = { version = "2.0", package = "libpulse-binding" }
