[package]
name = "media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
oled-api = { path = "../../oled-api" }
smol = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.56"
features = [
    "Foundation",
    "Foundation_Collections",
    "Media_Control",
]

[target.'cfg(target_os = "linux")'.dependencies.mpris]
version = "2"
