[package]
name = "media"
version = "0.1.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
oled-api = { path = "../../oled-api" }
oled-derive = { path = "../../oled-derive", features = ["into-proto"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Foundation",
    "Foundation_Collections",
    "Media_Control",
]

[target.'cfg(target_os = "linux")'.dependencies.mpris]
version = "2"
