[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
clap = { version = "4.4", features = ["derive"] }
image = "0.25"
oled-api = { path = "../../oled-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.4", features = ["json"] }
