[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
clap = { version = "4.4", features = ["derive"] }
image = "0.25"
log = "0.4"
oled-api = { path = "../../oled-api" }
oled-derive = { path = "../../oled-derive", features = ["into-proto"] }
oled-log = { path = "../../oled-log" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ureq = { version = "2.4", features = ["json"] }
