[package]
name = "audio"
version = "0.6.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
omni-led-api = { path = "../../omni-led-api" }
omni-led-derive = { path = "../../omni-led-derive", features = ["into-proto"] }
tokio = { version = "1.38", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }
windows-core = "0.61"
windows-implement = "0.60"

[target.'cfg(target_os = "linux")'.dependencies]
pulse = { version = "2.0", package = "libpulse-binding" }
