[package]
name = "clock"
version = "0.6.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.4", features = ["derive"] }
omni-led-api = { path = "../../omni-led-api" }
omni-led-derive = { path = "../../omni-led-derive", features = ["into-proto"] }
tokio = { version = "1.38", features = ["full"] }
