[package]
name = "clock"
version = "0.9.1"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[lib]
name = "clock"
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
omni-led-api = { path = "../../omni-led-api" }
omni-led-derive = { path = "../../omni-led-derive", features = ["into-proto"] }
