[package]
name = "hwinfo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
omni-led-api = { path = "../../omni-led-api" }
omni-led-derive = { path = "../../omni-led-derive", features = ["into-proto"] }
sysinfo = "0.37"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }