[package]
name = "images"
version = "0.4.1"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.25"
log = "0.4"
omni-led-api = { path = "../../omni-led-api" }
shlex = "1.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
