[package]
name = "images"
version = "0.6.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.25"
log = { version = "0.4", features = ["std"] }
omni-led-api = { path = "../../omni-led-api" }
shlex = "1.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
