[package]
name = "images"
version = "0.9.1"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
log = { version = "0.4", features = ["std"] }
omni-led-api = { path = "../../omni-led-api" }
omni-led-derive = { path = "../../omni-led-derive", features = ["plugin-entry"] }
shlex = "1.3"
