[package]
name = "weather"
version = "0.3.0"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }
clap = { version = "4.4", features = ["derive"] }
image = "0.25"
log = "0.4"
omni-led-api = { path = "../../omni-led-api" }
omni-led-derive = { path = "../../omni-led-derive", features = ["into-proto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ureq = { version = "2.4", features = ["json"] }
