[package]
name = "weather"
version = "0.9.1"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4" }
clap = { version = "4.5", features = ["derive"] }
humantime = "2.3"
image = "0.25"
log = { version = "0.4", features = ["std"] }
omni-led-api = { path = "../../omni-led-api" }
omni-led-derive = { path = "../../omni-led-derive", features = ["into-proto", "plugin-entry"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3.1", features = ["json"] }
