[package]
name = "system"
version = "0.10.1"
authors = ["Michał Bałabanow <m.balabanow@gmail.com>"]
license = "GPL-3.0-only"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
all-smi = "0.22"
clap = { version = "4.5", features = ["derive"] }
humantime = "2.3"
log = { version = "0.4", features = ["std"] }
omni-led-api = { path = "../../omni-led-api" }
omni-led-derive = { path = "../../omni-led-derive", features = ["plugin-entry"] }
serde = { version = "1", features = ["derive"] }
